--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="container"> 
         <div class="inner">
             <div class="item">
-                <img src="1.png" alt="Oven" class="img">
-                <button class="btn" id="btn1">Овен</button>
+                <img src="1.png" alt="Chikenburger" class="img">
+                <button class="btn" id="btn1">Чикенбургер</button>
             </div>
             <div class="item">
-                <img src="2.png" alt="Telec" class="img">
-                <button class="btn" id="btn2">Телец</button>
+                <img src="2.png" alt="Chiken_Premer" class="img">
+                <button class="btn" id="btn2">Чикен Премьер</button>
             </div>
         </div>
     </div>
