--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <img src="2.png" alt="Chiken_Premer" class="img">
                 <button class="btn" id="btn2">Чикен Премьер</button>
             </div>
+            <div class="item">
+                <img src="3.png" alt="Big_Cpeshial" class="img">
+                <button class="btn" id="btn2">Биг Спешиал</button>
+            </div>
         </div>
     </div>
     <div class="usercard" id="usercard"></div>
